objects/chatcomp__ChatterComplianceComment__c.object
<CustomObject>
    <description>Chatter Compliance by Arkus.</description>
    <fields>
        <fullName>chatcomp__Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Attachment_name__c</fullName>
        <label>Attachment name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Attachment_url__c</fullName>
        <description>URL to the original attachment</description>
        <formula>HYPERLINK( chatcomp__Attachment__c , chatcomp__Attachment_name__c , &quot;_self&quot; )</formula>
        <inlineHelpText>URL to the original attachment</inlineHelpText>
        <label>Attachment url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__ChatterCompliance__c</fullName>
        <label>Chatter Compliance</label>
        <referenceTo>chatcomp__ChatterCompliance__c</referenceTo>
        <relationshipName>ChatterComplianceComments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chatcomp__Chatter_Compliance_Post_Content_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Get the user input and the system output on feeds and comments, should be the same as except that &quot;Substitute banned words with character&quot; option is enabled.</description>
        <inlineHelpText>Get the user input and the system output on feeds and comments, should be the same as except that &quot;Substitute banned words with character&quot; option is enabled.</inlineHelpText>
        <label>Chatter Compliance Post Content Info</label>
        <referenceTo>chatcomp__ChatterCompliance_PostContentInformation__c</referenceTo>
        <relationshipName>ChatterComplianceComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__CommentContent__c</fullName>
        <label>Comment Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chatcomp__CommentIdNew_url__c</fullName>
        <formula>HYPERLINK( chatcomp__ChatterCompliance__r.chatcomp__PostId_New__c  , chatcomp__commentId_New__c &amp; &quot; (original comment)&quot;, &quot;_self&quot; )</formula>
        <label>Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Deleted_date__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chatcomp__Files_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Files Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__Files_attached_exceeded_size_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag indicates that the attachment size exceeded the limit allowed by salesforce, therefore the attachment does not appear in the notes &amp; attachments related list.</inlineHelpText>
        <label>Files attached exceeded size limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__MessageSender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Message Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Compliance_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__Original_comment_content__c</fullName>
        <description>The comment content before (if it was) it was filtered by the word blocker.</description>
        <inlineHelpText>The comment content before (if it was) it was filtered by the word blocker.</inlineHelpText>
        <label>Original comment content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chatcomp__Post_made_by_an_outside_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Chatter post is made by a Contact outside of the company.</description>
        <inlineHelpText>The Chatter post is made by a Contact outside of the company.</inlineHelpText>
        <label>Posted by a Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__This_message_is_a_ChatterMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this message is a private Chatter message.</description>
        <inlineHelpText>If checked this message is a private Chatter message.</inlineHelpText>
        <label>Is a Chatter Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chatcomp__commentId_New__c</fullName>
        <externalId>true</externalId>
        <label>commentId New</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__commentId__c</fullName>
        <label>Comment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__deletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deleted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatterComplianceComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chatcomp__deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Compliance Comment</label>
    <listViews>
        <fullName>chatcomp__All</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__ChatterCompliance__c</columns>
        <columns>chatcomp__CommentContent__c</columns>
        <columns>chatcomp__Original_comment_content__c</columns>
        <columns>chatcomp__Chatter_Compliance_Post_Content_Info__c</columns>
        <columns>chatcomp__deleted__c</columns>
        <columns>chatcomp__deletedBy__c</columns>
        <columns>chatcomp__Deleted_date__c</columns>
        <columns>chatcomp__Files_Attached__c</columns>
        <columns>chatcomp__Files_attached_exceeded_size_limit__c</columns>
        <columns>chatcomp__This_message_is_a_ChatterMessage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCC-{0000}</displayFormat>
        <label>ChatterComplianceComments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Compliance Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>